<resources>
    <string name="app_name">Expense Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rs_inr_or_other">Rs,INR,or other</string>
    <string name="enter_currency_name">ENTER CURRENCY NAME</string>
    <string name="find_expenses">find expenses</string>
    <string name="bank_name">BANK NAME</string>
    <string name="enter_bank_name">ENTER BANK NAME</string>
    <string name="change_bank">CHANGE BANK</string>
</resources>