<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bank_change">

    <TextView
        android:id="@+id/fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center|top"
        android:text="@string/change_bank"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_bank_name"
        android:layout_marginTop="100dp"
        android:layout_marginStart="40dp"
        android:textSize="30sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="140dp"
        android:layout_marginHorizontal="40dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bankname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:hint="@string/bank_name"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnfindexpenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_gravity="center|bottom"
        android:layout_marginVertical="250dp"
        android:text="@string/find_expenses"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_currency_name"
        android:layout_marginTop="250dp"
        android:layout_marginStart="40dp"
        android:textSize="30sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="320dp"
        android:layout_marginHorizontal="40dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/currencyname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:hint="@string/rs_inr_or_other"
            />
    </com.google.android.material.textfield.TextInputLayout>

</FrameLayout>